 * Removed deprecated VisualTest::DrawEmpiricalCDF,DrawHistogram,DrawClouds
 * Moved dot to Point::dot
 * Deprecated Weibull in favor of WeibullMin
 * Deprecated WeibullMuSigma in favor of WeibullMinMuSigma
 * Deprecated WeibullFactory in favor of WeibullMinFactory, buildAsWeibull
 * Deprecated GumbelAB

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * https://github.com/openturns/openturns/milestone/4?closed=1
 * #1006 (Text drawable does not handle size)
 * #1130 (Inconsistency in FittingTest)


== 1.13 release (2019-06-06) == #release-1.13

=== Library ===

==== Major changes ====
 * Added OPT++ solvers
 * Improved a lot the performace of all the Rosenblatt related computations
 * Added elementary calibration capabilities
 * Added CMinpack, Ceres Solver least-squares solvers
 * Add dlib solvers

==== New classes ====
 * ParametricPointToFieldFunction
 * LinearModelResult, LinearModelAlgorithm, LinearModelAnalysis
 * OPTpp
 * NearestPointProblem, LeastSquaresProblem
 * CMinpack
 * Ceres
 * DiscreteMarkovChain
 * CalibrationAlgorithm, CalibrationResult, GaussianLinearCalibration, LinearLeastSquaresCalibration
 * NonLinearLeastSquaresCalibration, GaussianNonLinearCalibration
 * Hypergeometric

==== API changes ====
 * Removed deprecated FunctionalChaosRandomVector::getSobol* methods
 * Removed deprecated UserDefinedCovarianceModel constructor based on a Collection<CovarianceMatrix>
 * Removed deprecated FieldFunction,FieldToPointFunction::getSpatialDimension
 * Removed deprecated LinearModelRSquared, LinearModelAdjustedRSquared
 * Deprecated LinearModel, LinearModelFactory
 * Moved HypothesisTest::(Partial|Full)Regression to LinearModelTest
 * Deprecated OptimizationProblem(levelFunction, levelValue)
 * Deprecated (Linear|Quadratic)(LeastSquares|Taylor)::getResponseSurface
 * FittingTest::BestModelBIC returns the Distribution and the BIC value
 * Deprecated VisualTest::DrawEmpiricalCDF,DrawHistogram,DrawClouds