@@ -37,3 +37,8 @@
 %include openturns/Domain.hxx
 
 namespace OT { %extend Domain { Domain (const Domain & other) { return new OT::Domain(other); } } }
+
+%pythoncode %{
+Domain.__contains__ = Domain.contains
+%}
+
