@@ -8,3 +8,7 @@
 
 %include openturns/DomainImplementation.hxx
 namespace OT { %extend DomainImplementation { DomainImplementation(const DomainImplementation & other) { return new OT::DomainImplementation(other); } } }
+
+%pythoncode %{
+DomainImplementation.__contains__ = DomainImplementation.contains
+%}
