@@ -29,7 +29,7 @@ print("simplices=", mesh1D.getSimplices())
 print("volume=", "%.3f" % mesh1D.getVolume())
 print("simplices volume=", mesh1D.computeSimplicesVolume())
 p = [1.3]
-print("is p=", p, " in mesh? ", mesh1Ddomain.contains(p))
+print("is p=", p, " in mesh? ", p in mesh1Ddomain)
 point = [1.8]
 print("Nearest index(", point, ")=", tree.query(point))
 simplex = enclosingSimplex.query(point)
