@@ -44,6 +44,7 @@
  * Deprecated GumbelAB
 
 === Python module ===
+ * Add Domain.__contains__ operator
 
 === Miscellaneous ===
 
